# quicnz

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  _auth.py  download_weathermap.py  list_services.py  session_status.py
src/quicnz/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
